--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorLightGreenishBlue">#62F5AB</color>
     <color name="colorYellowish">#F5EE62</color>
     <color name="colorDarkBlueGrey">#0D1725</color>
+    <color name="colorDarkBlueGrey25">#3f0d1725</color>
     <color name="colorDarkGreyBlueTwo">#343F6D</color>
     <color name="colorSlateGrey">#5B6C70</color>
     <color name="colorTiffanyBlue">#69E3E7</color>
