--- a/app/src/main/res/layout-land/activity_profil.xml
+++ b/app/src/main/res/layout-land/activity_profil.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="32dp"
-            android:text="@string/username"
+            android:text="@string/user_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
