design bouton rose

--- a/app/src/main/res/drawable-v24/style_button.xml
+++ b/app/src/main/res/drawable-v24/style_button.xml
@@ -6,6 +6,8 @@
     <solid
         android:color= "@color/colorLightMagenta" />
 
+    <size android:width="135dp" />
+
     <corners
         android:radius="5dp" />
 
