--- a/app/src/main/res/layout-land/activity_info_video.xml
+++ b/app/src/main/res/layout-land/activity_info_video.xml
@@ -64,12 +64,14 @@
 
     <Button
         android:id="@+id/bt_edit"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="100dp"
+        android:background="@drawable/style_button"
         android:text="@string/edit"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
