--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -62,11 +62,13 @@
                 <Button
                     android:id="@+id/bt_play"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_weight="0.33"
-                    android:text="@string/play_video" />
+                    android:background="@drawable/style_button"
+                    android:text="@string/play_video"
+                    android:textColor="@color/white" />
 
                 <Button
                     android:id="@+id/bt_edit"
