--- a/app/src/main/res/layout-land/activity_share_url.xml
+++ b/app/src/main/res/layout-land/activity_share_url.xml
@@ -67,11 +67,13 @@
     <Button
         android:id="@+id/button_go"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="36dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/style_button"
         android:text="@string/go"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/button_back"
         app:layout_constraintTop_toBottomOf="@+id/tv_url" />
 </android.support.constraint.ConstraintLayout>
