--- a/app/src/main/res/layout-land/activity_share_url.xml
+++ b/app/src/main/res/layout-land/activity_share_url.xml
@@ -56,10 +56,11 @@
     <Button
         android:id="@+id/button_back"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="372dp"
         android:layout_marginStart="372dp"
         android:layout_marginTop="32dp"
+        android:background="@null"
         android:text="@string/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_url" />
