--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -51,27 +51,33 @@
 
         <Button
             android:id="@+id/btn_chosse_color"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
+            android:layout_marginLeft="16dp"
+            android:background="@drawable/style_button_white"
             android:text="@string/choose"
             tools:layout_editor_absoluteX="449dp"
             tools:layout_editor_absoluteY="50dp" />
 
         <Button
             android:id="@+id/btn_aleatory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
             android:layout_weight="1"
+            android:background="@drawable/style_button_white"
             android:text="@string/aleatory"
             tools:layout_editor_absoluteX="586dp"
             tools:layout_editor_absoluteY="50dp" />
 
         <Button
             android:id="@+id/btn_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
+            android:background="@drawable/style_button_white"
             android:text="@string/add"
             tools:layout_editor_absoluteX="717dp"
             tools:layout_editor_absoluteY="50dp" />
