--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -5,17 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".AddGridActivity">
+    tools:context=".AddGridActivity"
+    android:padding="4dp">
 
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_margin="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,22 +21,29 @@
 
         <ImageView
             android:id="@+id/iv_color"
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:background="@android:color/darker_gray" />
+            android:background="@android:color/darker_gray"
+            android:layout_gravity="center_vertical"/>
 
         <EditText
             android:id="@+id/et_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
+            android:background="@drawable/style_input"
             android:ems="10"
             android:hint="@string/name_event"
             android:inputType="textPersonName"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            app:fontFamily="@font/roboto"
             tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="58dp" />
-
+            tools:layout_editor_absoluteY="58dp"
+            android:layout_gravity="center_vertical"/>
+<!--
         <TextView
             android:id="@+id/tv_color"
             android:layout_width="wrap_content"
@@ -48,13 +53,14 @@
             android:textSize="18sp"
             tools:layout_editor_absoluteX="363dp"
             tools:layout_editor_absoluteY="79dp" />
-
+-->
         <Button
             android:id="@+id/btn_chosse_color"
             android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
+            android:layout_weight="1"
             android:background="@drawable/style_button_white"
             android:text="@string/choose"
             tools:layout_editor_absoluteX="449dp"
@@ -63,9 +69,10 @@
         <Button
             android:id="@+id/btn_aleatory"
             android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="4dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@drawable/style_button_white"
             android:text="@string/aleatory"
@@ -74,8 +81,9 @@
 
         <Button
             android:id="@+id/btn_add"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="@drawable/style_button_white"
             android:text="@string/add"
