--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,10 @@
         <item name="windowNoTitle">true</item>
         <item name="drawerArrowStyle">@color/white</item>
     </style>
-  
-    <style name="AppEvent" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <!-- Customize your theme here. -->
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
 
