--- a/app/src/main/res/layout-land/activity_my_video.xml
+++ b/app/src/main/res/layout-land/activity_my_video.xml
@@ -48,6 +48,8 @@
             android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:text="@string/category"
+            android:textColor="@color/white"
+            app:fontFamily="@font/roboto_bold"
             app:layout_constraintTop_toBottomOf="@+id/search_video" />
     </LinearLayout>
 
