--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/colorSlateGrey"
     android:orientation="vertical">
 
     <ImageView
@@ -15,8 +16,8 @@
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_upload_video"
@@ -26,11 +27,13 @@
 
         <TextView
             android:id="@+id/title_video"
-            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_weight="1"
-            android:text="@string/title_video" />
+            android:text="@string/title_video"
+            android:textColor="@color/white"
+            app:fontFamily="@font/roboto" />
 
     </LinearLayout>
 
