--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -185,7 +185,7 @@
 
 
                 <TextView
-                    android:id="@+id/tv_add_moment"
+                    android:id="@+id/tv_add_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
