design background spinner

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="colorRosyPink">#F56290</color>
     <color name="colorDarkSkyBlue">#3490E1</color>
     <color name="colorSoftBlue">#6977E7</color>
-    <color name="colorWhiteTwo">#D8D8D8</color>
+    <color name="colorWhiteTwo">#d8d8d8</color>
     <color name="colorDusk">#4A6085</color>
     <color name="colorDuskTwo">#4A5479</color>
     <color name="colorFadedOrange">#F57A62</color>
