--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -83,7 +83,7 @@
             <Spinner
                 android:id="@+id/spinner_session_infos"
                 android:layout_width="256dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
@@ -179,7 +179,8 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:clickable="true"
-                    android:src="@android:drawable/ic_menu_add"
+                    android:src="@android:drawable/ic_input_add"
+                    app:backgroundTint="@color/colorWhiteTwo"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
 
