--- a/app/src/main/res/layout-land/activity_my_video.xml
+++ b/app/src/main/res/layout-land/activity_my_video.xml
@@ -55,6 +55,10 @@
         android:id="@+id/grid_videos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:columnWidth="150dp"
         android:gravity="center"
@@ -62,6 +66,8 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category" />
 
 </android.support.constraint.ConstraintLayout>
