--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -52,7 +52,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/bt_record_stop"
                     app:srcCompat="@android:drawable/checkbox_on_background" />
 
-                <VideoView
+                <SurfaceView
                     android:id="@+id/video_view"
                     android:layout_width="match_parent"
                     android:layout_height="297dp"
