--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -221,7 +221,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layout_share"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="invisible">
 
         <ImageView
             android:layout_width="match_parent"
@@ -244,7 +245,7 @@
             <TextView
                 android:id="@+id/tv_share"
                 android:layout_width="wrap_content"
-                android:layout_height="19dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
@@ -261,9 +262,9 @@
             <TextView
                 android:id="@+id/tv_url"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
                 android:layout_marginTop="20dp"
-                android:alpha="0.5"
                 android:background="@android:color/black"
                 android:gravity="center"
                 android:text="@string/url"
@@ -306,7 +307,7 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
-                    android:id="@+id/button_go"
+                    android:id="@+id/button_go_multi"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_marginLeft="36dp"
