--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -222,7 +222,7 @@
         android:id="@+id/layout_share"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
