--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -90,7 +90,7 @@
         android:id="@+id/session_record"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
@@ -151,7 +151,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_video_save">
 
                 <Button
-                    android:id="@+id/button_back"
+                    android:id="@+id/btn_back_main"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:background="@null"
@@ -160,7 +160,7 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
-                    android:id="@+id/button_go_multi"
+                    android:id="@+id/btn_play"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_marginLeft="36dp"
